--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,11 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+*.db
+*.db-shm
+*.db-wal
+
+Data/*.txt
+Data/*.csv
+Data/*.json
